# Voronoi

./: Cargo.toml  README.md
resources/: default.json
src/: clipboard_compat.rs  config.rs  main.rs  point.rs  render.rs  window.rs  windows.rs
src/shaders/: voronoi.frag  voronoi.vert
