[package]
name = "voronoi"
version = "0.1.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
lazy_static = "1.4"
random_color = "0.5"
send_wrapper = "0.5"
